--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,308 @@
 /* TODO Add site wide styles */
+body {
+    margin: 0;
+    font-family: sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    /* background-color: black; */
+    color: white;
+  }
+
+  * {
+    font-family: "Capsule Sans Display", system-ui, -apple-system,
+      BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+  }
+
+  .combined-bar {
+    color: black !important;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 100%;
+    position: fixed;
+  }
+
+  .navbar {
+    display: flex;
+    align-items: center;
+    height: 64px;
+    border-bottom: 1px solid #dbd9d9;
+    -webkit-box-align: center;
+  }
+
+  .lom-title {
+    margin-left: 5rem;
+    color: rgb(0,102,238);
+  }
+
+  .navlinks {
+    display: flex;
+    justify-content: space-evenly;
+    width: 540px;
+    flex-direction: row;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 28px;
+    letter-spacing: -0.25px;
+    font-family: "Capsule Sans Text", system-ui, -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Helvetica, Arial, sans-serif;
+  }
+
+  .links:hover,
+  .login:hover {
+    color: rgb(28, 45, 228);
+    cursor: pointer;
+  }
+
+  .landing {
+    color: black !important;
+    background-color: white !important;
+  }
+
+  .landing-top {
+    display: flex;
+    justify-content: flex-start;
+    height: 650px;
+    border-bottom: 1px solid black;
+    padding: 5.25% 0;
+  }
+
+  .nav-right {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: auto;
+    margin-right: 20px;
+    width: 140px;
+    justify-content: space-evenly;
+
+  }
+
+  .login {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    color: rgb(0,102,238);
+  }
+
+  .link-divider {
+    font-size: 26px;
+    font-weight: 200;
+    color: rgb(230,230,230);
+  }
+
+  .signup {
+    color: inherit;
+    text-decoration: none;
+    align-items: center;
+    box-sizing: border-box;
+    display: inline-flex;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    color: rgb(0,102,238);
+  }
+
+  .signup:hover {
+    color: rgb(19, 34, 167);
+  }
+
+  .bottom-nav {
+    background-color: white;
+    height: 64px;
+  }
+
+  .hidden {
+    display: none !important;
+  }
+  .landing-top-left {
+    display: flex;
+    flex-direction: column;
+    margin-left: 9rem;
+  }
+
+  .landing-top-text {
+    font-family: "Capsule Sans Display", system-ui, -apple-system,
+      BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+    font-size: 3.6058rem;
+    font-weight: 900;
+    line-height: 60px;
+    letter-spacing: -1.75px;
+    margin-bottom: 20px;
+  }
+
+  .landing-top-desc {
+    width: 370px;
+    font-size: 1em;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+  }
+
+  .landing-signup {
+    display: flex;
+    flex-direction: row;
+    width: 367px;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .landing-signup-left {
+    display: flex;
+    align-items: center;
+    width: 325px;
+    height: 80px;
+  }
+
+  .landing-signup-btn {
+    display: flex;
+    /* overflow: hidden; */
+    /* position: static; */
+    /* text-align: center; */
+    /* white-space: nowrap; */
+    height: 58px;
+    width: 100%;
+    cursor: pointer;
+    border-radius: 4px;
+    background-color: rgb(0,102,238);
+    color: white;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 700;
+  }
+
+  .landing-signup-btn:hover {
+    background-color: rgb(0,102,238)
+  }
+
+  .landing-login-link{
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    color: rgb(0,102,238);
+  }
+
+  .landing-disclosure {
+    margin-top: 30px;
+    width: 367px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 28px;
+  }
+
+  .landing-mid {
+    display: flex;
+    align-items: center;
+    height: 93px;
+    border-bottom: 1px solid black;
+    font-size: 18px;
+    justify-content: center;
+  }
+
+  .landing-lower-mid {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 30px;
+  }
+
+  .lower-mid-right {
+    width: 594px;
+  }
+
+  .landing-lower-img {
+    height: 591px;
+    width: 591px;
+    user-select: none;
+    object-fit: contain;
+    margin-right: 20px;
+  }
+
+  .lmr-header {
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 40px;
+    margin-bottom: -8px;
+  }
+
+  .lmr-desc {
+    font-size: 18px;
+  }
+
+  .bottom-nav {
+    display: flex;
+    align-items: center;
+    margin-left: 200px;
+    font-size: 18px;
+  }
+
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+
+  .hidden {
+    display: none !important;
+  }
+
+  .loading-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    margin-top: 40vh !important;
+  }
+  .centered {
+    max-height: 20vh;
+    max-width: 20vh;
+  }
+
+  .nav-offer {
+    display: flex;
+    gap: 50px;
+  }
+
+  .lwr-1 {
+    display: flex;
+    align-items: center;
+    height: 88px;
+    margin-bottom: 25px;
+  }
+
+  .lwr-title {
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+
+  .lwr-desc {
+    font-size: 18px;
+    font-weight: 400;
+    font-style: normal;
+    font-weight: normal;
+    letter-spacing: -0.25px;
+    line-height: 28px;
+  }
+
+  .lwr-img {
+    width: 68px;
+    height: 48px;
+    margin-right: 10px;
+  }
+
+  .lwr-lwr {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
