--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,12 +1,9 @@
 /* TODO Add site wide styles */
-body {
+  body {
     margin: 0;
-    font-family: sans-serif;
+    /* font-family: sans-serif;
     -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-
-    /* background-color: black; */
-    /* color: white; */
+    -moz-osx-font-smoothing: grayscale; */
   }
 
   * {
@@ -116,14 +113,31 @@ body {
     color: rgb(19, 34, 167);
   }
 
-  .bottom-nav {
-    background-color: white;
-    height: 64px;
+  .nav-bottom {
+    display: flex;
+    align-items: center;
+    background-color: rgb(0,112,191);
+    height: 3rem;
+  }
+
+  .links-container {
+      display: flex;
+      justify-content: space-between;
+      width: 400px;
+      margin-left: 5rem;
+  }
+
+  .home-link {
+    font-size: 16px;
+    font-weight: 700;
+    color: white;
+    /* margin-left: 4rem; */
   }
 
   .hidden {
     display: none !important;
   }
+
   .landing-top-left {
     display: flex;
     flex-direction: column;
@@ -165,10 +179,10 @@ body {
 
   .landing-signup-btn {
     display: flex;
-    /* overflow: hidden; */
-    /* position: static; */
-    /* text-align: center; */
-    /* white-space: nowrap; */
+    overflow: hidden;
+    position: static;
+    text-align: center;
+    white-space: nowrap;
     height: 58px;
     width: 100%;
     cursor: pointer;
