--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -13,7 +13,7 @@
     height: 2.6rem;
     width: 700px;
     margin-top: 11rem;
-    background-color: rgb(0,112,191);
+    background-color: rgb(10,82,130);
 }
 
 .home-title {
@@ -46,9 +46,9 @@
 .home-mid {
     display: flex;
     flex-direction: row;
-    height: 400px;
+    height: 360px;
     width: 100%;
-    background-color: orange;
+    background-color: rgb(246,246,246);
 }
 
 .home-mid-left {
@@ -57,7 +57,7 @@
     align-items: center;
     height: 100%;
     width: 24%;
-    background-color: brown;
+
 }
 
 .home-avatar {
@@ -70,7 +70,126 @@
 .home-mid-right {
     display: flex;
     flex-direction: column;
-    background-color: green;
     height: 100%;
     width: 76%;
+}
+
+.calories-remaining {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.calories-remaining p{
+    color: rgb(155,155,155);
+    font-size: 12px;
+}
+
+.calories-remaining a{
+    color: rgb(0,114,188);
+    font-size: 12px;
+    margin-left: 1rem;
+}
+
+.rem-cal {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    height: 3rem;
+    width: 88%;
+    border-bottom: 1px solid rgb(230,230,230);
+}
+
+.rem-cal p {
+    font-size: 43px;
+    font-weight: 700;
+    color: rgb(133,196,0);
+    padding-top: 0;
+    margin-top: 1.4rem;
+}
+
+.rem-cal button {
+    border-style: none;
+    background-color: rgb(0,0,0,0);
+    color: rgb(0,114,188);
+    padding-right: 0;
+    font-weight: 500;
+    height: 2.5rem;
+}
+
+.energy-calculation {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 88%;
+}
+
+.energy-top {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 1rem;
+    height: 4rem;
+}
+
+.cal-goal {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 7rem;
+    border-right: 1px solid rgb(230,230,230);
+}
+
+.cal-dng {
+    font-size: 20px;
+    color: rgb(102,102,102);
+    margin-bottom: 0;
+}
+
+.cal-goal-text {
+    font-size: 11px;
+    color: rgb(154,154,154);
+    margin-top: .25rem;
+}
+
+.current-food {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    width: 7rem;
+}
+
+.cur-food {
+    font-size: 20px;
+    color: rgb(102,102,102);
+    margin-bottom: 0;
+}
+
+.cur-food-text {
+    font-size: 11px;
+    color: rgb(154,154,154);
+    margin-top: .25rem;
+    margin-right: 1.9rem;
+}
+
+.energy-bottom {
+    display: flex;
+    height: 100%;
+    width: 100%;
+}
+
+.progress-bar-container {
+    display: flex;
+    background-color: rgb(230,230,230);
+    border: 1px solid rgb(205,205,205);
+    margin-top: 3rem;
+    height: 2rem;
+    width: 100%;
+}
+
+.progress-bar {
+    height: 2rem;
+    border: 1px solid rgb(205,205,205);
 }
