--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -117,6 +117,7 @@
     display: flex;
     align-items: center;
     background-color: rgb(0,112,191);
+    border-bottom: 32px solid rgb(10,82,130);
     height: 3rem;
   }
 
