--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -33,7 +33,7 @@
     margin-left: 5rem;
     font-size: 1.8rem;
     font-weight: 700;
-    color: rgb(0,102,238);
+    color: rgb(0,101,238)
   }
 
   .navlinks {
@@ -64,9 +64,8 @@
   .landing-top {
     display: flex;
     justify-content: flex-start;
-    height: 650px;
-    border-bottom: 1px solid black;
-    padding: 5.25% 0;
+    height: 700px;
+    padding-top: 13%;
   }
 
   .nav-right {
@@ -135,9 +134,9 @@
     /* margin-left: 4rem; */
   }
 
-  .hidden {
+  /* .hidden {
     display: none !important;
-  }
+  } */
 
   .landing-top-left {
     display: flex;
