--- a/react-app/src/components/Food_Log/FoodLog.css
+++ b/react-app/src/components/Food_Log/FoodLog.css
@@ -50,6 +50,16 @@
     background-color: rgb(223,231,238);
 }
 
+.foodlog-selected-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 3.5rem;
+    padding-left: 1rem;
+    background-color: rgb(242,242,248)
+}
+
 
 .foodlog-top #breakfast:hover {
     background-color: rgb(242, 242, 248);
