finished creating/styling and implementing footer

--- a/react-app/src/components/Daily_Nutrition_Goals/Daily_Nutrition_Goals.css
+++ b/react-app/src/components/Daily_Nutrition_Goals/Daily_Nutrition_Goals.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 700px;
+    height: 91.9999vh;
+    width: 100vw;
 }
 
 .dng-macros-calc {
@@ -42,7 +43,6 @@
     align-items: center;
     width: 50%;
     height: 100%;
-    margin-top: 6rem;
 }
 
 .dng-title {
