--- a/react-app/src/components/Food_Log/FoodLog.css
+++ b/react-app/src/components/Food_Log/FoodLog.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 100vh;
-    width: 100%;
+    height: 91.9999vh;
+    width: 100vw;
 }
 
 .main-container {
@@ -13,7 +13,7 @@
     width: 700px;
     height: 560px;
     background-color: rgb(242, 242, 248);
-    margin-top: 13rem;
+    margin-top: 16rem;
     border: 1px solid rgb(223,231,238);
 }
 
