--- a/react-app/src/components/auth/Login.css
+++ b/react-app/src/components/auth/Login.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 100vh;
-    width: 100%;
+    height: 91.9999vh;
+    width: 100vw;
     margin: 0;
     background-color: white;
     color: black;
@@ -17,7 +17,7 @@
     background-color: rgba(211, 211, 211, 0.913);
     width: 600px;
     height: 500px;
-    margin-top: 16rem;
+    margin-top: 20rem;
   }
 
   .email,
