--- a/react-app/src/components/Food_Log/FoodLog.css
+++ b/react-app/src/components/Food_Log/FoodLog.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 91.9999vh;
+    align-items: center;
+    height: 120vh;
     width: 100vw;
 }
 
@@ -13,7 +14,7 @@
     width: 700px;
     height: 560px;
     background-color: rgb(242, 242, 248);
-    margin-top: 16rem;
+    margin-top: 10rem;
     border: 1px solid rgb(223,231,238);
 }
 
