--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -1,8 +1,9 @@
 .home-main {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    height: 91.9999vh;
+    height: 100vh;
     width: 100vw;
 }
 
@@ -12,7 +13,7 @@
     justify-content: space-between;
     height: 2.6rem;
     width: 700px;
-    margin-top: 16rem;
+    margin-top: 10rem;
     background-color: rgb(10,82,130);
 
 }
