--- a/react-app/src/components/Daily_Nutrition_Goals/Daily_Nutrition_Goals.css
+++ b/react-app/src/components/Daily_Nutrition_Goals/Daily_Nutrition_Goals.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 120vh;
+    align-items: center;
+    height: 92vh;
     width: 100vw;
 }
 
@@ -41,8 +42,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: static;
     width: 50%;
-    height: 100%;
+    height: 70%;
 }
 
 .dng-title {
