--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 92vh;
     width: 100vw;
 }
 
@@ -48,7 +48,7 @@
 .home-mid {
     display: flex;
     flex-direction: row;
-    height: 500px;
+    height: 470px;
     width: 100%;
     background-color: rgb(246,246,246);
 }
@@ -219,9 +219,21 @@
     width: 100%;
 }
 
-.progress-bar {
+.carb-bar {
     height: 2rem;
-    background-color: rgb(133,196,0);
+    background-color: rgb(10,82,130);
+    /* background-color: #bf1649; */
+}
+
+.fat-bar {
+    height: 2rem;
+    background-color: rgb(222, 215, 27);
+}
+
+.protein-bar {
+    height: 2rem;
+    /* background-color: rgb(92, 211, 102); */
+    background-color: rgb(104,181,223);
 }
 
 .macros-container {
@@ -246,4 +258,53 @@
     align-items: center;
     height: 3rem;
     width: 100%;
+    margin-top: 1rem;
+    /* background-color: brown; */
+    border-top: 1px solid rgb(230,230,230);
+}
+
+.macros-breakdown p {
+    /* background-color: orange; */
+    margin-top: 1rem;
+    font-weight: 500;
+}
+
+.carb-box-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.carb-box {
+    height: 15px;
+    width: 15px;
+    background-color: rgb(10,82,130);
+    margin-right: 5px;
+}
+
+.fat-box-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.fat-box {
+    height: 15px;
+    width: 15px;
+    /* background-color: rgb(67, 133, 203); */
+    background-color: rgb(222, 215, 27);
+    margin-right: 5px;
+}
+
+.pro-box-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.pro-box {
+    height: 15px;
+    width: 15px;
+    background-color: rgb(104, 181, 223);
+    margin-right: 5px;
 }
