--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -221,19 +221,22 @@
 
 .carb-bar {
     height: 2rem;
-    background-color: rgb(10,82,130);
+    /* background-color: #0070BF; */
     /* background-color: #bf1649; */
+    background-color: rgb(10,82,130);
 }
 
 .fat-bar {
     height: 2rem;
     background-color: rgb(222, 215, 27);
+    /* background-color: rgb(0,112,191); */
 }
 
 .protein-bar {
     height: 2rem;
     /* background-color: rgb(92, 211, 102); */
-    background-color: rgb(104,181,223);
+    /* background-color: #E25B04; */
+    background-color: rgb(104, 181, 223);
 }
 
 .macros-container {
