--- a/react-app/src/components/Food_Log/FoodLog.css
+++ b/react-app/src/components/Food_Log/FoodLog.css
@@ -7,16 +7,16 @@
     width: 100vw;
 }
 
-.main-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 700px;
-    height: 560px;
-    background-color: rgb(242, 242, 248);
-    margin-top: 10rem;
-    border: 1px solid rgb(223,231,238);
-}
+    .main-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 700px;
+        height: 560px;
+        background-color: rgb(242, 242, 248);
+        margin-top: 10rem;
+        border: 1px solid rgb(223,231,238);
+    }
 
 .foodlog-title-container {
     display: flex;
@@ -27,11 +27,11 @@
     background-color: rgb(10,82,130);
 }
 
-.foodlog-title-container p {
-    color: white;
-    font-size: 1.2rem;
-    font-weight: 500;
-}
+    .foodlog-title-container p {
+        color: white;
+        font-size: 1.2rem;
+        font-weight: 500;
+    }
 
 .foodlog-top {
     display: flex;
@@ -41,56 +41,132 @@
 
 }
 
-.foodlog-meal-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 3.5rem;
-    padding-left: 1rem;
-    background-color: rgb(223,231,238);
-}
+    .foodlog-meal-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 3.5rem;
+        padding-left: 1rem;
+        background-color: rgb(223,231,238);
+    }
 
-.foodlog-selected-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 3.5rem;
-    padding-left: 1rem;
-    background-color: rgb(242,242,248)
-}
+    .foodlog-selected-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 3.5rem;
+        padding-left: 1rem;
+        background-color: rgb(242,242,248)
+    }
 
 
-.foodlog-top #breakfast:hover {
-    background-color: rgb(242, 242, 248);
-}
+    .foodlog-top #breakfast:hover {
+        background-color: rgb(242, 242, 248);
+    }
 
-.foodlog-top #lunch:hover {
-    background-color: rgb(242, 242, 248);
-}
+    .foodlog-top #lunch:hover {
+        background-color: rgb(242, 242, 248);
+    }
 
-.foodlog-top #lunch {
-    border-left: 1px solid rgb(212, 212, 212);
-    border-right: 1px solid rgb(212, 212, 212);
-}
+    .foodlog-top #lunch {
+        border-left: 1px solid rgb(212, 212, 212);
+        border-right: 1px solid rgb(212, 212, 212);
+    }
 
-.foodlog-top #dinner:hover {
-    background-color: rgb(242, 242, 248);
-}
+    .foodlog-top #dinner:hover {
+        background-color: rgb(242, 242, 248);
+    }
 
-.foodlog-top h3 {
-    color: rgb(102,102,102);
-}
+    .foodlog-top h3 {
+        color: rgb(102,102,102);
+    }
 
 .foodlog-mid {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 2rem;
-    width: 80%;
+    width: 90%;
     height: 100%;
 }
+
+.foodlog-existing {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+    .foodlog-existing-title-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        /* background-color: orange; */
+        height: 2.5rem;
+        width: 82%;
+        padding-bottom: .25rem;
+    }
+
+    .foodlog-existing-title-container-btm-brder {
+        width: 100%;
+        height: 2px;
+        border-bottom: 1px solid rgb(212, 212, 212);
+    }
+
+    .foodlog-existing-title-container div {
+        font-size: 18px;
+        font-weight: 600;
+        color: grey;
+    }
+
+    .foodlog-existing-nutrition {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        /* background-color: orange; */
+        margin-top: .75rem;
+        border-bottom: 1px solid rgb(212, 212, 212);
+    }
+
+    .foodlog-existing-nutrition div {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 20%;
+        height: 100%;
+        padding-bottom: .50rem;
+        /* background-color: green; */
+    }
+
+    .foodlog-existing-nutrition p {
+        font-size: 16px;
+        color: rgb(102,102,102);
+    }
+
+    .foodlog-existing-nutrition span {
+        display: flex;
+        /* justify-content: center;
+        align-items: center; */
+        color: rgb(102,102,102);
+
+    }
+
+    .foodlog-existing-edit:hover {
+        color: rgb(0,101,238);
+    }
+
+    .foodlog-existing-delete:hover {
+        color: rgb(176, 21, 21);
+    }
+
+    .foodlog-existing-nutrition i {
+        font-size: 18px;
+    }
+
+
+
 
 .foodlog-modal-main {
     display: flex;
@@ -102,31 +178,31 @@
     margin-left: 2rem;
 }
 
-.search-bar {
-    height: 20px;
-    width: 200px;
-}
+    .search-bar {
+        height: 20px;
+        width: 200px;
+    }
 
-.search-results {
-    display: flex;
-    flex-direction: column;
-    height: 200px;
-    width: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
-}
+    .search-results {
+        display: flex;
+        flex-direction: column;
+        height: 200px;
+        width: 100%;
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
 
-.result-box {
-    height: 50px;
-    width: 100%;
-    border-bottom: 1px solid grey;
-    background-color: rgb(228, 228, 238);
-}
+    .result-box {
+        height: 50px;
+        width: 100%;
+        border-bottom: 1px solid grey;
+        background-color: rgb(228, 228, 238);
+    }
 
-.result-box:hover {
-    background-color: white;
-    text-shadow: 2px, 2px;
-}
+    .result-box:hover {
+        background-color: white;
+        text-shadow: 2px, 2px;
+    }
 
 .foodlog-form {
     display: flex;
