reworked favorite foods table and seeder to no longer have relation to foodlog. Fixed issue where fav foods would not auto populate inputs when clicked on

--- a/react-app/src/components/Food_Log/FoodLog.css
+++ b/react-app/src/components/Food_Log/FoodLog.css
@@ -339,6 +339,14 @@
         align-items: center;
     }
 
+    #item-name p {
+        margin-left: .5rem;
+    }
+
+    .favorite-items:hover {
+        background-color: white;
+    }
+
     .favorite-items #fav-symbl {
         height: 100%;
         width: 2rem;
