--- a/react-app/src/components/Food_Log/FoodLog.css
+++ b/react-app/src/components/Food_Log/FoodLog.css
@@ -337,6 +337,7 @@
     .favorite-items #item-name {
         display: flex;
         align-items: center;
+        width: 100%;
     }
 
     #item-name p {
